{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Keyboard",
            "id": "64ad9aad-2e92-46a9-8394-8d00d4d16a2d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f67983f9-8b72-4d2f-a85b-703d3f877a92",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Yaw",
                    "type": "Value",
                    "id": "936e18bb-43ca-46dd-a0ca-619b13d87363",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pitch",
                    "type": "Value",
                    "id": "c3151924-eaf4-4b82-b51f-6b5ab98ab78f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RTSView",
                    "type": "Button",
                    "id": "30f30e9e-c968-4b1b-bce3-0617028eb131",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Speed",
                    "type": "Value",
                    "id": "6dcfecf7-9b0e-483f-a6af-0841c3a8359a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Heading",
                    "type": "Button",
                    "id": "4c27e7c4-2eeb-4eff-8846-bb6b03ea8027",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextEntity",
                    "type": "Button",
                    "id": "00052d87-23b3-42ba-bf5c-90083b24e386",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cursor",
                    "type": "Button",
                    "id": "0046ff58-3ea1-467b-a70f-333fdd1ef479",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CursorPosition",
                    "type": "Value",
                    "id": "78ce3964-7a4f-4b89-b6cb-3af0610e8d9d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ClearSelection",
                    "type": "Button",
                    "id": "40178561-e695-4574-b148-70ebae988276",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "08ea3fe2-b904-46d9-b89b-93445fad32fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Intercept",
                    "type": "Button",
                    "id": "e4d31d4c-5464-4e57-8b79-0659ceff66f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Create100",
                    "type": "Button",
                    "id": "74a5d121-8f50-49b3-b844-57ddb0f74406",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Create",
                    "type": "Button",
                    "id": "91bc7bd3-382e-4f59-972f-81092c3c5aa6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Destroy",
                    "type": "Button",
                    "id": "320df4f8-6c01-4e6e-aafb-4f5b5f13b44f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "7bbfbee4-42a0-4158-a3b8-e7409d3a91f5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "74e0dcb8-042d-4fc3-8e6a-db7ce77e4bb9",
                    "path": "<Keyboard>/#(Z)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ceac0d04-73a8-4c01-ad4e-6e5eeb949215",
                    "path": "<Keyboard>/#(X)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "781e5243-d9b7-4bf6-83fc-78990e7181a6",
                    "path": "<Touchscreen>/primaryTouch/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9dc1e153-ab93-4fd3-913e-98ad334ca781",
                    "path": "<Keyboard>/#(C)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RTSView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "3D Vector",
                    "id": "11885b2f-c5fa-4854-b0fc-d4fae0025b85",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bde2e05c-928f-4e87-b9f0-519a7ac09c5d",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0d63169f-30ef-4dca-9219-93e730481cb3",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f82d2fbc-0553-4b35-aba7-f774426873f6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "68a1ef6c-08eb-4dee-87e5-dedd96cfde38",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "a8777dea-e3e7-40e4-bbed-7eeb17af476c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "b9f97baf-6718-40b7-ace0-812da7fb8dd2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "65d45da1-04ed-41b5-aec7-d37b7b660994",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f675fff4-5c88-449b-8b07-ff6e1889137f",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b1273491-306b-45bd-94d2-9191081f3594",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "51cad81c-dea2-4d14-b7b7-ccdc88a92488",
                    "path": "<Touchscreen>/primaryTouch/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "e3e21d95-e4c8-4b36-80b2-d4e57ef58a20",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speed",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a91cd8a5-fe69-4224-b5a7-905d4600fde3",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speed",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a0f88388-cd50-4bee-ad75-069affdfa77e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speed",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "1d5c2334-bfcf-42fa-8ddf-dc24ac4bbca4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Heading",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "69eb6fef-6b13-4aac-a8a2-d0cd5e42c1dd",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Heading",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b9522775-c3af-42db-90a8-369ca06fa084",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Heading",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "82e0bf6e-08dc-4e9f-a42d-b15c9f3966a4",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextEntity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4df9687-c941-4f69-bc0c-217ba9a2be01",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3c7aaaf-dc0d-466b-a280-7bae5b5df249",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "865c5fbd-fe37-4b58-89a5-f93a40dec024",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClearSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d1807f4-2b12-43b5-ab25-d5df6b16ce02",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59509ce1-a2f2-4fc6-b0b5-111ae86956dc",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Intercept",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6ee38ae-d1ea-4803-94fd-a0e33c81f63d",
                    "path": "<Keyboard>/f12",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Create100",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b287a5fd-a5cf-498a-91d5-a2e6b3aa0310",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Create",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "200287fc-9a01-4c12-a65d-17b11a53b10f",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Destroy",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}